	(\@sect, \label): do not redefine if \fmtversion >= 2023-06-01.
	(\@currentlabelname): Use hooks to define with current LaTeX.
	(\nameref): with current LaTeX, use its saved label name.
	(All this from Ulrike.)
	
	* tubhytest.tex: add \tableofcontents and references.
	* tubreftest.tex: simple page and name references.
	* Makefile (check): exit after first test; sort.

2023-06-22  Karl Berry  <karl@freefriends.org>

	* tugboat.bst (monthtie): new field, used now for patching
	tb133chernoff-widows, reference [8].
	* ltubguid.ltx (Bibliography): mention.

	* tugboat.bst (webpage): omit "inbrackets onlinestring output"
	since it causes the year (or other material) to be printed
	in brackets. Not what we want.

2023-06-14  Karl Berry  <karl@freefriends.org>

	* ltubguid.ltx: mention float placement: captions below figures,
	but above tables and listings.

	* tugboat.dtx (draft): \PassOptionsToPackage{final}{hyperref}
	to avoid the global [draft] option being passed on.

	(final): don't bother setting \NoBlackBoxes, since we've
	always overridden this in tugboat.dates anyway.
	
	(\TP): print the : in \sl too.
	
	(\tubdots): show example of redefining \tubdots.
	
	(\l@section, \@oddhead, \@evenhead): back to using \thepage.
	(\thepage): redefine to insert our ? for draft pages.
	
	(\nomarkfootnote): locally disable \Hy@Warning since our support
	footnotes will always generate an "empty anchor" warning.

2023-05-22  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (draft,final): do not redefine \thepage.
	(\tubtypesetpageno): separate page number typesetting,
	with preceding ? if the page number > 900.
	(\l@section, \@oddhead, \@evenhead): use \tubtypesetpageno.

	(\XMP): new abbrev.
	(\tubdots): do \mathellipsis in math mode.
	(\@r@maketitle): do secondcolstart before the PreTitleDrop,
	so the latter might be usable in that case.

2023-04-17  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (draft, final): do not redefine \thepage indirectly.