@@ -12,6 +12,8 @@
 	* tubhytest.tex: add \tableofcontents and references.
 	* tubreftest.tex: simple page and name references.
 	* Makefile (check): exit after first test; sort.
+	
+	* Makefile (tugboat-code.pdf): change name of code output.
 
 2023-06-22  Karl Berry  <karl@freefriends.org>
 
